# GenTEval

./: .gitignore  README.md  pyproject.toml  ruff.toml
genteval/: __init__.py
genteval/compressors/: __init__.py  compressed_dataset.py  compressor.py  trace.py
genteval/compressors/gen_t/: edge_synthesizer.py  gen_t_compressor.py  graph_gen_t_compressor.py  metadata.py  naive_gen_t_compressor.py  node_synthesizer.py  start_time.py
genteval/compressors/gen_t/ctgan/: gen_t_ctgan_synthesizer.py
genteval/compressors/head_sampling/: head_sampling_compressor.py
genteval/compressors/markov_gen_t/: config.py  depth_markov.py  markov_gen_t_compressor.py  metadata_vae.py  mrf_graph.py  start_time_count.py  start_time_vae.py
genteval/compressors/markov_gen_t/root/: root_mlp.py  root_table.py  root_vae.py
genteval/compressors/simple_gent/: __init__.py  config.py  simple_gent_compressor.py  timing_utils.py
genteval/compressors/simple_gent/models/: __init__.py  metadata_vae_model.py  node_encoder.py  node_feature.py  root_duration_model.py  root_model.py  span_duration_bounds_model.py  span_gap_bounds_model.py  topology_model.py  trace_type.py
genteval/compressors/simple_gent/proto/: __init__.py  simple_gent.proto
genteval/data_collection/: README.md
genteval/data_collection/ai_agent/: __init__.py  batch_convert_cli.py  cli.py  trajectory_converter.py
genteval/data_collection/utils/: adjust_duration.py  duration_adjuster.py  remove_query_param.py
genteval/dataset/: __init__.py  dataset.py  rca_eval_dataset.py
genteval/evaluators/: __init__.py  evaluator.py
genteval/evaluators/graph/: graph_evaluator.py
genteval/evaluators/query/: __init__.py  count_over_time_evaluator.py  duration_evaluator.py  duration_over_time_evaluator.py  error_over_time_evaluator.py  operation_evaluator.py  rate_over_time_evaluator.py  span_count_evaluator.py  time_evaluator.py
genteval/evaluators/rca/: micro_rank_evaluator.py  trace_rca_evaluator.py
genteval/models/: __init__.py  metadata_vae.py  normalizing_flow.py
genteval/plotting/: data.py  duration_over_time_plot.py  error_over_time_plot.py  graph_plot.py  operation_plot.py  rate_over_time_plot.py  rca_plot.py  scatter_plot_utils.py
genteval/proto/: __init__.py  resource.proto  trace.proto
genteval/reports/: __init__.py  base_report.py  count_over_time_report.py  duration_over_time_report.py  duration_report.py  enhanced_report.py  error_over_time_report.py  graph_report.py  operation_report.py  rate_over_time_report.py  rca_report.py  size_report.py  span_count_report.py  time_report.py
genteval/reports/duration_metrics/: __init__.py  depth_before_after.py  percentile_comparison.py  time_series_comparison.py  wasserstein_distance.py
genteval/utils/: __init__.py  data_structures.py  interpolation.py
src/compressors/: __init__.py  compressed_dataset.py  compressor.py  trace.py
src/compressors/gen_t/: config.py  edge_synthesizer.py  gen_t_compressor.py  graph_gen_t_compressor.py  metadata.py  naive_gen_t_compressor.py  node_synthesizer.py  start_time.py
src/compressors/gen_t/ctgan/: gen_t_ctgan.py  gen_t_ctgan_synthesizer.py
src/compressors/head_sampling/: head_sampling_compressor.py
src/compressors/markov_gen_t/: __init__.py  config.py  depth_markov.py  markov_gen_t_compressor.py  metadata_vae.py  mrf_graph.py  root_mlp.py  root_vae.py  start_time_count.py  start_time_vae.py
src/compressors/markov_gen_t/root/: __init__.py  root_mlp.py  root_table.py  root_vae.py
src/data_collection/: README.md  recorder.py  request_info.py  request_recorder_api.py
src/data_collection/schedule/: 4g_wifi_60min.txt
src/data_collection/visualization/: index.html
src/dataset/: __init__.py  dataset.py  rca_eval_dataset.py
src/evaluations/: __init__.py  evaluation.py
src/evaluations/query/: relative_duration_evaluation.py
src/evaluations/rca/: trace_rca_evaluation.py
src/evaluators/: __init__.py  evaluator.py
src/evaluators/query/: duration_evaluator.py  operation_evaluator.py  span_count_evaluator.py
src/evaluators/rca/: __init__.py  micro_rank_evaluator.py  microrank_evaluator.py  trace_rca_evaluator.py
src/reports/: __init__.py  base_report.py  duration_report.py  enhanced_report.py  operation_report.py  rca_report.py  size_report.py  span_count_report.py  trace_rca_report.py
