[project]
name = "GenTEval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.3",
    "msgpack>=1.1.0",
    "numpy>=2.2.6",
    "playwright>=1.53.0",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "sdv>=1.21.0",
    "wandb>=0.21.0",
]

[project.scripts]
collect_request_data = "src.bin.collect_request_data:main"
adjust_duration = "src.data_collection.utils.adjust_duration:main"
remove_query_param = "src.data_collection.utils.remove_query_param:main"
delete_experiment_all = "src.bin.delete_experiment_all:main"
evaluate = "src.bin.evaluate:main"
evaluate_all = "src.bin.evaluate_all:main"
generate_report = "src.bin.generate_report:main"
gent_all = "src.bin.gent_all:main"
gent = "src.bin.gent:main"
head_sampling_all = "src.bin.head_sampling_all:main"
head_sampling = "src.bin.head_sampling:main"
markov_gent_all = "src.bin.markov_gent_all:main"
markov_gent = "src.bin.markov_gent:main"
normalize_all = "src.bin.normalize_all:main"
normalize = "src.bin.normalize:main"
pickle_analyzer = "src.bin.pickle_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
