[project]
name = "GenTEval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.3",
    "msgpack>=1.1.0",
    "numpy>=2.2.6",
    "playwright>=1.53.0",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "sdv>=1.21.0",
    "wandb>=0.21.0",
]

[project.scripts]
collect_request_data = "genteval.bin.collect_request_data:main"
adjust_duration = "genteval.data_collection.utils.adjust_duration:main"
remove_query_param = "genteval.data_collection.utils.remove_query_param:main"
delete_experiment_all = "genteval.bin.delete_experiment_all:main"
evaluate = "genteval.bin.evaluate:main"
evaluate_all = "genteval.bin.evaluate_all:main"
generate_report = "genteval.bin.generate_report:main"
gent_all = "genteval.bin.gent_all:main"
gent = "genteval.bin.gent:main"
head_sampling_all = "genteval.bin.head_sampling_all:main"
head_sampling = "genteval.bin.head_sampling:main"
markov_gent_all = "genteval.bin.markov_gent_all:main"
markov_gent = "genteval.bin.markov_gent:main"
normalize_all = "genteval.bin.normalize_all:main"
normalize = "genteval.bin.normalize:main"
pickle_analyzer = "genteval.bin.pickle_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genteval"]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
