[project]
name = "GenTEval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "colorama>=0.4.6",
  "matplotlib>=3.10.3",
  "msgpack>=1.1.0",
  "numpy>=2.2.6",
  "playwright>=1.53.0",
  "protobuf>=6.32.0",
  "grpcio-tools>=1.74.0",
  "rich>=14.0.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
  "networkx>=3.0",
]

[project.scripts]
delete_experiment_all = "genteval.bin.delete_experiment_all:main"
evaluate = "genteval.bin.evaluate:main"
evaluate_all = "genteval.bin.evaluate_all:main"
generate_report = "genteval.bin.generate_report:main"
head_sampling_all = "genteval.bin.head_sampling_all:main"
head_sampling = "genteval.bin.head_sampling:main"
normalize_all = "genteval.bin.normalize_all:main"
normalize = "genteval.bin.normalize:main"
simple_gent_all = "genteval.bin.simple_gent_all:main"
simple_gent = "genteval.bin.simple_gent:main"

pickle_analyzer = "genteval.bin.pickle_analyzer:main"

collect_request_data = "genteval.bin.collect_request_data:main"
export_feb_traces = "genteval.bin.export_feb_traces:main"
adjust_duration = "genteval.bin.adjust_duration:main"
remove_query_param = "genteval.data_collection.utils.remove_query_param:main"
analyze_otel_attributes = "genteval.bin.analyze_otel_attributes:main"
export_otel_traces = "genteval.bin.export_otel_traces:main"

convert_trajectory = "genteval.data_collection.ai_agent.cli:main"
batch_convert_trajectory = "genteval.data_collection.ai_agent.batch_convert_cli:main"

# Development tools
generate-proto = "genteval.bin.generate_proto:main"
draw = "genteval.bin.draw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genteval"]

[dependency-groups]
dev = ["ruff>=0.11.10"]
